# better-twitter-archiver-server

./: .gitignore  Cargo.toml  build.sh  tweets.db  tweets.db-shm  tweets.db-wal  tweets.db.backup
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20220101_000002_create_conversation_table.rs  m20220101_000003_create_tweet_table.rs  m20220101_000004_create_tweet_reference_table.rs
src/: app.rs  main.rs  seed.rs  setup.rs  utilities.rs  utils.rs
src/app/: api.rs
src/app/data/: read.rs  write.rs
src/app/data/entities/: conversations.rs  prelude.rs  tweet_references.rs  tweets.rs  users.rs
src/entities/: conversation.rs  mod.rs  tweet.rs  tweet_reference.rs  tweet_references.rs  user.rs  users.rs
