[package]
name = "better-twitter-archiver-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
rocket = { version = "^0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "0.8.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
ron = "0.7.0"
twitter-v2 = "0.1.4"
chrono = "0.4.19"
async-recursion = "1.0.0"
dotenvy = "0.15.1"
serde = "1.0.126"
serde_derive = "1"