[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
futures = "0.3.21"
async-std = "1.12.0"
[dependencies.sea-orm-migration]
version = "^0.8.0"
features = [
   "sqlx-sqlite",
   "runtime-async-std-native-tls"
]